fix: improve visibility of actions in Log Explorer

--- a/frontend/src/app/shared/components/utm/filters/utm-elastic-filter/elastic-filter.component.scss
+++ b/frontend/src/app/shared/components/utm/filters/utm-elastic-filter/elastic-filter.component.scss
@@ -11,7 +11,7 @@
 }
 
 .filter-time-container {
-  min-width: 300px;
+  border-left: 1px solid #ddd;
 }
 
 app-elastic-filter-add {
@@ -48,7 +48,7 @@ app-elastic-filter-add {
   color: #0277bd;
 }
 
-.order-button:hover {
+.order-button:hover:not(.btn-right) {
   background-color: #d3dae6;
 }
 
@@ -63,8 +63,10 @@ app-elastic-filter-add {
 }
 
 .btn-right {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  border: 1px dashed #d3dae6;
+  background-color: transparent;
+  width: auto;
+  padding: .25rem .5rem;
 }
 
 .context-menu {
@@ -98,6 +100,14 @@ app-elastic-filter-add {
 
 .ml-auto {
   margin-left: auto;
+}
+
+.filters-container {
+  flex-basis: 85%;
+}
+
+.gap-1 {
+  gap: .25rem;
 }
 
 
